ParseTable/grammars/factor.ebnf
expr ::= term1 {BOOLOPR term1};
term1 ::= term2 [RELOPR term2];
term2 ::= term3 {ADDOPR term3};
term3 ::= factor {MULTOPR factor};
factor ::= LITERAL
| IDENT [INIT | exprList]
| monadicOpr factor
| LPAREN expr RPAREN;
exprList ::= LPAREN [expr {COMMA expr}] RPAREN;
monadicOpr ::= NOT | ADDOPR
